<resources>
    <string name="app_name">1-Harjoitus</string>
    <string name="registration_title">Registration</string>
    <string name="name_input">Name</string>
    <string name="address_input">Address</string>
    <string name="other_input">Other things (allergies etc)</string>
    <string name="phone_input">Phone number</string>
    <string name="save_btn">SAVE</string>
    <string name="recorder_title">Sport Recorder</string>
    <string name="info_btn">PERSONAL INFO</string>
    <string name="swimming_btn">SWIMMING</string>
    <string name="record_description">Record your sport activity</string>
    <string name="running_btn">RUNNING</string>
    <string name="cycling_btn">CYCLING</string>
    <string name="gym_btn">GYM</string>
    <string name="skiing_btn">SKIING</string>
    <string name="dancing_btn">DANCING</string>
</resources>